Fix z-index of indicators fullSize.

--- a/web/src/App/Pages/Environment/View/Indicator/styles.css
+++ b/web/src/App/Pages/Environment/View/Indicator/styles.css
@@ -1,4 +1,5 @@
 :local(.container) {
+  position: relative;
 }
 
 :local(.fullSize) {
@@ -9,7 +10,9 @@
   left: 0;
   bottom: 0;
   position: fixed;
+  z-index: 10000;
   background-color: #fff;
+  transition: all 0.2 ease;
 }
 
 :local(.header) {
@@ -23,4 +26,6 @@
 
 :local(.fullSize) .title {
   text-align: center;
+  font-size: 30px;
+  font-weight: bold;
 }
