--- a/web/src/App/Pages/Environment/View/styles.css
+++ b/web/src/App/Pages/Environment/View/styles.css
@@ -1,4 +1,5 @@
 :local(.container) {
+  overflow: hidden;
 }
 
 :local(.item) {
